doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\2006939\Desktop\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\+libs\KarelJRobot.jar;C:\Users\2006939\Desktop\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\+libs\mbsbb.jar;C:\Users\2006939\Desktop\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\+libs\mbsgui.jar;C:\Users\2006939\Desktop\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\+libs\objectdraw.jar;C:\Users\2006939\Desktop\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1
-d
C:\Users\2006939\Desktop\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\2006939\Desktop\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\lab_1\individual_lab\Problem2.java
<---- end of javadoc command ---->
Loading source file C:\Users\2006939\Desktop\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\lab_1\individual_lab\Problem2.java...
C:\Users\2006939\Desktop\APCS-A-CH-0-Karel-master\APCS-Karel-Unit-1\lab_1\individual_lab\Problem2.java:38: error: ';' expected
    public void turnLeftMoveEight():{
                                   ^
1 error
